# libsve

./: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: BitmapFrame.h  Frame.h  GPUContext.h  GPUKernel.h  GPUKernelSourceProvider.h  PImpl.h  PixelFormats.h
src/core/src/: BitmapFrame.cpp  Frame.cpp  GPUContext.cpp  GPUKernel.cpp  PixelFormats.cpp  PixelFormatsConverter.cpp  PrivateGPUContextStructsImpl.h  Utils.cpp  Utils.h
